<resources>
    <string name="app_name">ALC 4 Phase 1 C1.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="alc_4_phase_1">ALC 4 Phase 1</string>
    <string name="my_name">Francis Aburam</string>
    <string name="track">Track:</string>
    <string name="android">Android</string>
    <string name="country">Country:</string>
    <string name="countryName">Ghana</string>
    <string name="phone">Phone Number:</string>
    <string name="phoneNumber">+233 277 789 265</string>
    <string name="email">Email:</string>
    <string name="emailAddress">faburam@hotmail.com</string>
    <string name="my_picture">my picture</string>
    <string name="slack">Slack Username:</string>
    <string name="username">"@Francis"</string>
    <string name="welcome_alc_4_0">Welcome to ALC 4.0</string>
</resources>
