<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context=".Profile">
 <ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content">
<RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:id="@+id/imageView"
            android:src="@drawable/black_man_suit_oval"
            android:layout_centerHorizontal="true"

            android:contentDescription="@string/my_picture"/>
    <TextView
            android:id="@+id/tvName"
            android:text="@string/my_name"
            android:textColor="@android:color/black"
            android:fontFamily="@font/android_insomnia_regular"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            tools:textAppearance="@android:style/TextAppearance"/>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        android:layout_below="@id/tvName"

/>
    <TextView

            android:text="@string/track"
            android:fontFamily="@font/android_insomnia_regular"
            android:textColor="@android:color/black"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTrack"
            android:layout_below="@id/divider"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
    />
    <TextView
            android:text="@string/android"
            android:fontFamily="@font/android_insomnia_regular"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTrack1"
            android:layout_below="@id/divider"
            android:layout_toEndOf="@id/tvTrack"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
    />
    <TextView
            android:text="@string/country"
            android:fontFamily="@font/android_insomnia_regular"
            android:textColor="@android:color/black"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvCountry"
            android:layout_below="@id/tvTrack"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
    />
    <TextView
            android:text="@string/countryName"
            android:fontFamily="@font/android_insomnia_regular"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCountryName"
            android:layout_below="@id/tvTrack1"
            android:layout_toEndOf="@id/tvCountry"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
    />

    <TextView
            android:text="@string/email"
            android:fontFamily="@font/android_insomnia_regular"
            android:textColor="@android:color/black"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmail"
            android:layout_below="@id/tvCountry"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
    />
    <TextView
            android:text="@string/emailAddress"
            android:fontFamily="@font/android_insomnia_regular"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmailAddress"
            android:layout_below="@id/tvCountryName"
            android:layout_toEndOf="@id/tvEmail"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
    />

    <TextView
            android:text="@string/phone"
            android:fontFamily="@font/android_insomnia_regular"
            android:textColor="@android:color/black"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvPhone"
            android:layout_below="@id/tvEmail"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
    />
    <TextView
            android:text="@string/phoneNumber"
            android:fontFamily="@font/android_insomnia_regular"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPhoneNumber"
            android:layout_below="@id/tvEmailAddress"
            android:layout_toEndOf="@id/tvPhone"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
    />
    <TextView
            android:text="@string/slack"
            android:fontFamily="@font/android_insomnia_regular"
            android:textColor="@android:color/black"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvSlackUser"
            android:layout_below="@id/tvPhone"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
    />
    <TextView
            android:text="@string/username"
            android:fontFamily="@font/android_insomnia_regular"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSlackUserName"
            android:layout_below="@id/tvPhoneNumber"
            android:layout_toEndOf="@id/tvSlackUser"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
    />
</RelativeLayout>
    </ScrollView>
</RelativeLayout>