<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <!--<ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent">-->

    <Button

            android:text="@string/about_alc"
            android:fontFamily="@font/android_insomnia_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAboutALC"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="230dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            android:background="@layout/round_corner_button"
            android:onClick="openAbout"
    />
    <Button
            android:text="@string/my_profile"
            android:fontFamily="@font/android_insomnia_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnProfile"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnAboutALC"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintVertical_bias="0.011"
            android:background="@layout/round_corner_button"
            android:onClick="openProfile"
    />
    <TextView
            android:text="@string/welcome_alc_4_0"
            android:fontFamily="@font/android_insomnia_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnAboutALC" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <!--</ScrollView>-->
</android.support.constraint.ConstraintLayout>